--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
    </title>
    <meta charset="utf-8">
    <meta name="description" content="CV en ligne FF" />
+   <meta name=viewport content="width=device-width, initial-scale=1">
 </head>
 
 <body>
