--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </br><a href="http://www.viadeo.com/profile/00226ekc6rp8ogdt" target="_blank"><img class="viadeo" src="images/viadeo.png" target="_blank"></a>
       </div>
     </br>
-        <a href="https://www.linkedin.com/profile/view?id=AAIAABVSv7YBT1IANCk5HfEJUGvjHxnoudMnxIA&trk=nav_responsive_tab_profile" target="_blank"><img id="etudes" class="linkedIn" src="images/linkedin_haut.jpg"></a>
+        <a href="https://www.linkedin.com/in/fran%C3%A7ois-fontaine-1329849b" target="_blank"><img id="etudes" class="linkedIn" src="images/linkedin_haut.jpg"></a>
     </div>
     </div>
     </div>
@@ -299,7 +299,7 @@
                 <a href="http://www.viadeo.com/profile/00226ekc6rp8ogdt" target="_blank"><img class="reseaux_viadeo" src="images/viadeo.png" target="_blank"></a>
         </div>
         <div class="col-md-2 col-sm-2 col-xs-12">
-                <a href="https://www.linkedin.com/profile/view?id=AAIAABVSv7YBT1IANCk5HfEJUGvjHxnoudMnxIA&trk=nav_responsive_tab_profile" target="_blank"><img class="reseaux_linkedIn" src="images/linkedin_bas.jpg"></a>
+                <a href="https://www.linkedin.com/in/fran%C3%A7ois-fontaine-1329849b" target="_blank"><img class="reseaux_linkedIn" src="images/linkedin_bas.jpg"></a>
         </div>
   </div>
 </footer>
