--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="col-md-4 col-sm-12 col-xs-12 section_1_droite">
     </br>  <div>
         <a href="https://github.com/FontaineFrancois" target="_blank"><img class="github" src="images/github_haut.png"></a>
-        </br><a href="http://www.viadeo.com/profile/00226ekc6rp8ogdt" target="_blank"><img class="viadeo" src="images/viadeo.png" target="_blank"></a>
+        </br><a href="http://fr.viadeo.com/fr/profile/fran%C3%A7ois.fontaine16" target="_blank"><img class="viadeo" src="images/viadeo.png" target="_blank"></a>
       </div>
     </br>
         <a href="https://www.linkedin.com/in/fran%C3%A7ois-fontaine-1329849b" target="_blank"><img id="etudes" class="linkedIn" src="images/linkedin_haut.jpg"></a>
@@ -299,7 +299,7 @@
                 <a href="http://www.viadeo.com/profile/00226ekc6rp8ogdt" target="_blank"><img class="reseaux_viadeo" src="images/viadeo.png" target="_blank"></a>
         </div>
         <div class="col-md-2 col-sm-2 col-xs-12">
-                <a href="https://www.linkedin.com/in/fran%C3%A7ois-fontaine-1329849b" target="_blank"><img class="reseaux_linkedIn" src="images/linkedin_bas.jpg"></a>
+                <a href="http://fr.viadeo.com/fr/profile/fran%C3%A7ois.fontaine16" target="_blank"><img class="reseaux_linkedIn" src="images/linkedin_bas.jpg"></a>
         </div>
   </div>
 </footer>
